added the ui design to the assets folder

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Simple Login Page</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="photizo.css">
+    <link rel="stylesheet" href="assets/css/photizo.css">
 </head>
 
 <body>
@@ -13,18 +13,18 @@
         <div class="flex-items items-01">
             <div class="form-container">
                 <h1>Sign in to your Account</h1>
-                    <form >
-                        <div class="form-input">
-                            <label for="email">Email Address:</label>
-                            <input type="email" name="email" placeholder="email">
-                        </div>
-                        <div class="form-input">
-                            <label for="password">Password:</label>
-                            <input type="password" name="password" placeholder="password">
-                        </div>
-                        <button type="submit">Sign in</button>
-                        <p>Don't have an account yet? <a href="#">click here</a> </p>
-                    </form>
+                <form >
+                    <div class="form-input">
+                        <label for="email">Email Address:</label>
+                        <input type="email" name="email" placeholder="email" autofocus>
+                    </div>
+                    <div class="form-input">
+                        <label for="password">Password:</label>
+                         <input type="password" name="password" placeholder="password">
+                    </div>
+                    <button type="submit">Sign in</button>
+                    <p><strong>don't have an account yet?</strong> <a href="#">click here</a></p>
+                </form>
             </div>
         </div>
         <div class="flex-items items-02">
