--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,28 +14,29 @@
         <div class="flex-items items-01">
             <div class="form-container">
                 <h1>Sign in to your Account</h1>
-                    <form >
-                        <div class="form-input">
-                            <label for="email">Email Address:</label>
-                            <input type="email" name="email" placeholder="email">
-                        </div>
-                        <div class="form-input">
-                            <label for="password">Password:</label>
-                            <input type="password" name="password" placeholder="password">
-                        </div>
-                        <button type="submit">Sign in</button>
-                        <p>Don't have an account yet? <a href="#">click here</a> </p>
-                    </form>
+                <form>
+                    <div class="form-input">
+                        <label for="email">Email Address:</label>
+                        <input type="email" name="email" placeholder="Email">
+                    </div>
+                    <div class="form-input">
+                        <label for="password">Password:</label>
+                        <input type="password" name="password" placeholder="Password">
+                    </div>
+                    <button type="submit">Sign in</button>
+                    <p>Not a User? <a href="#">Join Us</a> </p>
+                </form>
             </div>
         </div>
         <div class="flex-items items-02">
             <div class="items-02 logo">
                 <h2><span>TP</span></h2>
             </div>
-            <h1><span>TEAM PHOTIZO</span></h1> 
+            <h1><span>TEAM PHOTIZO</span></h1>
             <p class="tagline"><em>...Work, Share, Collaborate.</em></p>
-            <p class="intro">PHOTIZO is a Greek word which means light. <br>It is a condition of divine awareness, when there is divine illumination.</p><br>
-        </div>  
+            <!--<p class="intro">PHOTIZO is a Greek word which means light. <br>It is a condition of divine awareness, when there is divine illumination.</p><br>-->
+        </div>
     </section>
 </body>
+
 </html>
