added error mes

--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
             <div class="form-container">
                 <h1>Sign in to your Account</h1>
                 <form>
+                    <span style="text-align: center;color: red;margin: 2px auto;display: block;">Error message</span>
                     <div class="form-input">
                         <label for="email">Email Address:</label>
-                        <input type="email" name="email" placeholder="Email">
+                        <input type="email" name="email" placeholder="Email" required="required">
                     </div>
                     <div class="form-input">
                         <label for="password">Password:</label>
-                        <input type="password" name="password" placeholder="Password">
+                        <input type="password" name="password" placeholder="Password" required="required">
                     </div>
                     <button type="submit">Sign in</button>
-                    <p>Not a User? <a href="#">Join Us</a> </p>
+                    <p>Not a User? <a href="signup.html">Join Us</a> </p>
                 </form>
             </div>
         </div>
