--- a/signup.html
+++ b/signup.html
@@ -6,7 +6,7 @@
     <title>Simple Login Page</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="C:\Users\Administrator\Documents\WorkSpace\HNG 6\hngi6-stage2-task1\photizo.css">
+    <link rel="stylesheet" href="photizo.css">
 </head>
 
 <body>
@@ -15,6 +15,7 @@
             <div class="form-container">
                 <h1>Welcome to Photizo!</h1>
                 <form>
+                    <span style="text-align: center;color: red;margin: 2px auto;display: block;">Error message</span>
                     <div class="form-input">
                         <label for="name">Name:</label>
                         <input type="name" name="name" placeholder="Name">
